// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectCreateItem should render correctly 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
  background: #F0F0F5;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  cursor: initial;
}

.emotion-0:last-of-type {
  border-bottom: none;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <li
    aria-selected="false"
    class="emotion-0"
  >
    Select an item or type a new value
  </li>
</div>
`;

exports[`SelectEmptyItem should render correctly 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
  background: #F0F0F5;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  cursor: initial;
}

.emotion-0:last-of-type {
  border-bottom: none;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <li
    aria-selected="false"
    class="emotion-0"
  >
    No results were found
  </li>
</div>
`;

exports[`SelectHelperMenuItem should render correctly 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-0:last-of-type {
  border-bottom: none;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <li
    aria-selected="false"
    class="emotion-0"
  >
    Loading
  </li>
</div>
`;

exports[`SelectLoadingItem should render correctly 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
  background: #F0F0F5;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  cursor: initial;
}

.emotion-1:last-of-type {
  border-bottom: none;
}

.emotion-1:hover {
  background: #F0F0F5;
}

.emotion-1:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-0 {
  pointer-events: none;
  font-size: 1rem;
  line-height: 1;
  color: #0069D0;
  float: right;
}

.emotion-0:after {
  -webkit-animation: animation-0 450ms infinite linear;
  animation: animation-0 450ms infinite linear;
  border: 2px solid currentColor;
  border-radius: 50%;
  border-right-color: transparent;
  content: "";
  display: inline-block;
  height: 1rem;
  width: 1rem;
}

<div>
  <li
    aria-selected="false"
    class="emotion-1"
  >
    Loading...
    <span
      class="emotion-0"
    />
  </li>
</div>
`;

exports[`SelectMenuItem should render correctly 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-0:last-of-type {
  border-bottom: none;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <li
    aria-selected="false"
    class="emotion-0"
  >
    Item
  </li>
</div>
`;

exports[`SelectMenuItem should render correctly when custom style defined 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
  color: red;
}

.emotion-0:last-of-type {
  border-bottom: none;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <li
    aria-selected="false"
    class="emotion-0"
  >
    Item
  </li>
</div>
`;

exports[`SelectMenuItem should render correctly when selected 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
  outline: 0;
  background: #F0F0F5;
}

.emotion-0:last-of-type {
  border-bottom: none;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <li
    aria-selected="true"
    class="emotion-0"
  >
    Item
  </li>
</div>
`;
